--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accesorios | TechShop</title>
-    <link rel="shortcut icon" href="/shop.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="../shop.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
@@ -135,7 +135,7 @@
         </p>
     </footer>
 
-    <script src="/js/carrito.js"></script>
+    <script src="../js/carrito.js"></script>
 </body>
 
 </html>
