--- a/pages/celulares.html
+++ b/pages/celulares.html
@@ -18,7 +18,7 @@
         <nav>
             <ul class="ul-container">
                 <li><a href="notebooks.html">Notebooks</a></li>
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="accesorios.html">Accesorios</a></li>
 
                 <div id="carrito-container" class="carrito-container">
